# 3Drec-TCC

./: README.md  core-tests.tar.xz  mvg-edited.7z  mvg-edited.tar.xz  mvg-edited2.tar.xz  mvg-edited3.tar.xz  openMVG-to-labrador-2.tar.xz  openMVG-to-labrador.tar.xz  test-labrador.tar.xz
test-labrador/: CMakeLists.txt  test-lab-2.cpp  test-lab.cpp
